--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.servlet.context-path:/dataProcess
 #logback
 logback.root=e:/logs/
 spring.config.import=classpath:/config/db.properties,classpath:/config/procedure.properties
-dataSourceNames=gzl
-primaryDataSource=gzl
+dataSourceNames=cyzz_new
+primaryDataSource=cyzz_new
 jasypt.encryptor.password=whatAWonderfulWorld
 jasypt.encryptor.algorithm=PBEWITHHMACSHA512ANDAES_256
