--- a/src/main/resources/config/procedure.properties
+++ b/src/main/resources/config/procedure.properties
@@ -1,8 +1,12 @@
-pro_list_startUsers=gzl@pkg_dataprocess.getStartUsers
-pro_list_approvalUsers=gzl@pkg_dataprocess.getApprovalUsers
-pro_list_allUsers=gzl@pkg_dataprocess.getAllUsers
-pro_list_startItems=gzl@pkg_dataprocess.getStartItems
-pro_save_createAppList=gzl@pkg_dataprocess.createAppList
-pro_pglist_appListsToCheck=gzl@pkg_dataprocess.getAppListsToCheck
-pro_pglist_appListsParticipated=gzl@pkg_dataprocess.getAppListsParticipated
-pro_pglist_appListsAsStarter=gzl@pkg_dataprocess.getAppListsAsStarter
+pro_list_startUsers=cyzz_new@pkg_dataprocess.getStartUsers
+pro_list_approvalUsers=cyzz_new@pkg_dataprocess.getApprovalUsers
+pro_list_allUsers=cyzz_new@pkg_dataprocess.getAllUsers
+pro_list_startItems=cyzz_new@pkg_dataprocess.getStartItems
+pro_save_createAppList=cyzz_new@pkg_dataprocess.createAppList
+pro_pglist_appListsToCheck=cyzz_new@pkg_dataprocess.getAppListsToCheck
+pro_pglist_appListsParticipated=cyzz_new@pkg_dataprocess.getAppListsParticipated
+pro_pglist_appListsAsStarter=cyzz_new@pkg_dataprocess.getAppListsAsStarter
+
+#encrypt fields value before save
+dataIds2EncryptBeforSave=user
+params2Encrypt=pswd
